# custom2fa

./: .gitignore  LICENSE  README.md
authenticator/: .gitignore  Cargo.toml  README.md  accounts.c2fa
authenticator/Dev logs/: README.md
authenticator/cli/: Cargo.toml  README.md
authenticator/cli/src/: main.rs
authenticator/core/: Cargo.toml  README.md
authenticator/core/src/: account.rs  crypto.rs  error.rs  lib.rs  otp_uri.rs  storage.rs  totp.rs
authenticator/desktop/: Cargo.toml  README.md
authenticator/desktop/src/: main.rs
authenticator/docs/: BUILD_AND_LAYOUT.md  PUBLIC_REPO_CHECKLIST.md  README.md  USER_GUIDE.md
authenticator/mobile/: README.md
