[package]
name = "custom2fa_core"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base32 = "0.4"
base64 = "0.22"
rand = "0.8"
time = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = "1.8"
url = "2.5"
image = "0.25"
rqrr = "0.8"